RESOLVED FIXED174948
ObjectToStringAdaptiveStructureWatchpoint should not fire if it's dying imminently.
https://bugs.webkit.org/show_bug.cgi?id=174948
Summary ObjectToStringAdaptiveStructureWatchpoint should not fire if it's dying immin...
Mark Lam
Reported 2017-07-28 12:26:47 PDT
Details coming. <rdar://problem/33495680>
Attachments
proposed patch. (5.98 KB, patch)
2017-07-28 13:19 PDT, Mark Lam
fpizlo: review+
Saam Barati
Comment 1 2017-07-28 12:41:01 PDT
Maybe it’s worth implementing one of the more comprehensive solutions we brainstormed in a similar previous bug?
Mark Lam
Comment 2 2017-07-28 13:19:06 PDT
Created attachment 316672 [details] proposed patch.
Mark Lam
Comment 3 2017-07-28 13:29:50 PDT
Thanks for the review. Landed in r220012: <http://trac.webkit.org/r220012>.
Note You need to log in before you can comment on or make changes to this bug.